<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical" >

        <TextView
            style="@style/BigTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/welcome_login" />

        <EditText
            android:id="@+id/username"
            style="@style/Input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form_input"
            android:hint="@string/input_username"
            android:minHeight="40dp" />

        <EditText
            android:id="@+id/password"
            style="@style/Input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form_input"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:minHeight="40dp" />

        <Button
            android:id="@+id/login"
            style="@style/ButtonTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bgorange"
            android:padding="8dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/register"
            style="@style/ButtonTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bgpurple"
            android:padding="8dp"
            android:text="@string/want_toregister" />
    </LinearLayout>

</LinearLayout>