<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/phone"
        style="@style/Input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/form_input"
        android:hint="@string/phone"
        android:minHeight="40dp" />

    <EditText
        android:id="@+id/password"
        style="@style/Input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/form_input"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:minHeight="40dp" />

    <EditText
        android:id="@+id/city"
        style="@style/Input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/form_input"
        android:hint="@string/input_city"
        android:minHeight="40dp" />

    <Button
        android:id="@+id/nextstep"
        style="@style/ButtonTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bgblue"
        android:padding="8dp"
        android:text="@string/nextstep" />

</LinearLayout>