<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/spotstep1tab"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/bghl"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/login_title"
            style="@style/BarTitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/register" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/firststep"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/phone"
            style="@style/Input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/form_input"
            android:hint="@string/phone"
            android:minHeight="40dp" />
        <EditText
            android:id="@+id/password"
            style="@style/Input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form_input"
            android:hint="@string/input_password"
            android:minHeight="40dp" />
        <EditText
            android:id="@+id/city"
            style="@style/Input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form_input"
            android:hint="@string/input_city"
            android:minHeight="40dp" />

        <Button
            android:id="@+id/register"
            style="@style/ButtonTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bgorange"
            android:padding="8dp"
            android:text="@string/nextstep" />
    </LinearLayout>

</LinearLayout>