<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/spotstep2tab"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/Mainbg"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/gbutton"
            android:src="@drawable/bg" />

        <TextView
            android:id="@+id/spotstep2_title"
            style="@style/BarTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/back"
            android:gravity="center"
            android:text="@string/add_comment" />

        <Button
            android:id="@+id/comment_save"
            style="@style/ButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/gbutton"
            android:text="@string/save" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="89"
        android:background="#DDD"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/FormLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/FormLabel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:gravity="right|center"
                android:text="@string/attitude" />

            <RadioGroup
                android:id="@+id/attitude"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="7"
                android:background="@drawable/form_input_left_border"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/good"
                    style="@style/MenuTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/soso"
                    style="@style/MenuTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/soso" />

                <RadioButton
                    android:id="@+id/bad"
                    style="@style/MenuTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/bad" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/FormLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp" >

            <TextView
                style="@style/FormLabel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:gravity="right|center"
                android:text="@string/desc" />

            <EditText
                android:id="@+id/desc"
                style="@style/Input"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="7"
                android:background="@drawable/form_input_left_border"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>