<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/spotstep1tab"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/Mainbg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:src="@drawable/back" />

  

        <TextView
            android:id="@+id/comment"
            style="@style/BarTitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/back"
            android:gravity="center"
            android:text="@string/action_comment" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@color/Lightgrey" >

        <ListView
            android:id="@+id/commentlist"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@color/Lightgrey"
            android:layout_marginTop="8dp"
            android:dividerHeight="6dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/Lightgrey"
        android:gravity="center"
        android:orientation="horizontal" >

      <RadioGroup
            android:id="@+id/attitude"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/all"
                style="@style/MenuTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/good"
                style="@style/MenuTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio"
                android:button="@null"
                android:gravity="center"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/soso"
                style="@style/MenuTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio"
                android:button="@null"
                android:gravity="center"
                android:text="@string/soso" />

            <RadioButton
                android:id="@+id/bad"
                style="@style/MenuTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio"
                android:button="@null"
                android:gravity="center"
                android:text="@string/bad" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>